5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4008/executions/1828_3177.log
== TEST (2019-06-12 14:07:02) 
-- CODE:
string = input("digite uma string: ")
a = 0
e = 0
i = 0
o = 0
u = 0
for g in string:
	if(g == a):
		a = a + 1
	elif(g == e):
		e = e + 1
	elif(g == i):
		i = i + 1
	elif(g == o):
		o = 0 + 1
	elif(g == u):
		u = u + 1
print(a)
print(e)
print(i)
print(o)
print(u)
-- OUTPUT:
0
0
0
0
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:07:13) 
-- CODE:
string = input("digite uma string: ")
a = 0
e = 0
i = 0
o = 0
u = 0
for g in string:
	if(g == a):
		a = a + 1
	elif(g == e):
		e = e + 1
	elif(g == i):
		i = i + 1
	elif(g == o):
		o = 0 + 1
	elif(g == u):
		u = u + 1
print(a)
print(e)
print(i)
print(o)
print(u)
-- OUTPUT:
0
0
0
0
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:08:56) 
-- CODE:
string = input("digite uma string: ")
a = 0
e = 0
i = 0
o = 0
u = 0
for g in string:
	if(g == a):
		a = a + 1
	elif(g == e):
		e = e + 1
	elif(g == i):
		i = i + 1
	elif(g == o):
		o = 0 + 1
	elif(g == u):
		u = u + 1
print(a)
print(e)
print(i)
print(o)
print(u)
-- OUTPUT:
0
0
0
0
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:10:52) 
-- CODE:
string = input("digite uma string: ")
a = 0
e = 0
i = 0
o = 0
u = 0
for g in string:
	if(g == a):
		a = a + 1
		print(a)
	elif(g == e):
		e = e + 1
		print(e)
	elif(g == i):
		i = i + 1
		print(i)
	elif(g == o):
		o = o + 1
		print(o)
	elif(g == u):
		u = u + 1
		print(u)
-- OUTPUT:
0
0
0
0
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:11:12) 
-- CODE:
string = input("digite uma string: ")
a = 0
e = 0
i = 0
o = 0
u = 0
for g in string:
	if(g == a):
		a = a + 1
	print(a)
	elif(g == e):
		e = e + 1
	print(e)
	elif(g == i):
		i = i + 1
	print(i)
	elif(g == o):
		o = o + 1
	print(o)
	elif(g == u):
		u = u + 1
	print(u)
-- ERROR:
File "XXXX", line 11
    elif(g == e):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:13:03) 
-- CODE:
from numpy import* 
string = array(eval(input("digite uma string: ")))
a = 0
e = 0
i = 0
o = 0
u = 0
for g in range(size(string)):
	if(g == a):
		a = a + 1
	elif(g == e):
		e = e + 1
	elif(g == i):
		i = i + 1
	elif(g == o):
		o = o + 1
	elif(g == u):
		u = u + 1

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import* 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:13:22) 
-- CODE:
from numpy import* 
string = array(eval(input("digite uma string: ")))
a = 0
e = 0
i = 0
o = 0
u = 0
for g in range(size(string)):
	if(g == a):
		a = a + 1
	elif(g == e):
		e = e + 1
	elif(g == i):
		i = i + 1
	elif(g == o):
		o = o + 1
	elif(g == u):
		u = u + 1

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import* 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:17:08) 
-- CODE:
from numpy import* 
s = array(eval(input("digite uma string: ")))
a = 0
e = 0
i = 0
o = 0
u = 0
for g in range(size(s)):
	if(g = a):
		a = a + 1
	elif(g = e):
		e = e + 1
	elif(g = i):
		i = i + 1
	elif(g = o):
		o = o + 1
	elif(g = u):
		u = u + 1
print()

-- ERROR:
File "XXXX", line 9
    if(g = a):
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:17:54) 
-- CODE:
from numpy import* 
s = array(eval(input("digite uma string: ")))
a = 0
e = 0
i = 0
o = 0
u = 0
for g in range(size(s)):
	if(g == a):
		a = a + 1
	elif(g == e):
		e = e + 1
	elif(g == i):
		i = i + 1
	elif(g == o):
		o = o + 1
	elif(g == u):
		u = u + 1
print("a =", a)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import* 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:36:00) 
-- CODE:
s = array("digite uma string: ")
a = 0
e = 0
i = 0
o = 0
u = 0
for g in range(s):
	if(g == a):
		a = a + 1
	elif(g == e):
		e = e + 1
	elif(g == i):
		i = i + 1
	elif(g == o):
		o = o + 1
	elif(g == u):
		u = u + 1
print(a)
print(e)
print(i)
print(o)
print(u)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    s = array("digite uma string: ")
NameError: name 'array' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:36:10) 
-- CODE:
s = input("digite uma string: ")
a = 0
e = 0
i = 0
o = 0
u = 0
for g in range(s):
	if(g == a):
		a = a + 1
	elif(g == e):
		e = e + 1
	elif(g == i):
		i = i + 1
	elif(g == o):
		o = o + 1
	elif(g == u):
		u = u + 1
print(a)
print(e)
print(i)
print(o)
print(u)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    for g in range(s):
TypeError: 'str' object cannot be interpreted as an integer
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:36:49) 
-- CODE:
s = input("digite uma string: ")
a = 0
e = 0
i = 0
o = 0
u = 0
for g in str(s):
	if(g == a):
		a = a + 1
	elif(g == e):
		e = e + 1
	elif(g == i):
		i = i + 1
	elif(g == o):
		o = o + 1
	elif(g == u):
		u = u + 1
print(a)
print(e)
print(i)
print(o)
print(u)

-- OUTPUT:
0
0
0
0
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:37:21) 
-- CODE:
s = input("digite uma string: ")
a = 0
e = 0
i = 0
o = 0
u = 0
for g in s:
	if(g == a):
		a = a + 1
	elif(g == e):
		e = e + 1
	elif(g == i):
		i = i + 1
	elif(g == o):
		o = o + 1
	elif(g == u):
		u = u + 1
print(a)
print(e)
print(i)
print(o)
print(u)

-- OUTPUT:
0
0
0
0
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
